Add: ExportFunc to ShotenshaWorshipSurvivorPage

--- a/remics-test1/force-app/main/default/classes/DeceasedSurvivorDao.cls
+++ b/remics-test1/force-app/main/default/classes/DeceasedSurvivorDao.cls
@@ -1,14 +1,16 @@
 public with sharing class DeceasedSurvivorDao {
 
-    // 指定期間に召天した召天者とその遺族を取得
+    // 指定期間に召天した召天者とその遺族を世帯順に取得
     @AuraEnabled(cacheable=true)
-    public static List<DeceasedSurvivor__c> getDeceasedSurvivorByDate(List<Date> dateList) {
+    public static List<DeceasedSurvivor__c> getDeceasedSurvivorByDateOrderbyHousehold(List<Date> dateList) {
         return [
             SELECT 
                 Id,
                 Name,
+                // 遺族
                 SurvivorPerson__r.Name,
                 SurvivorIRelationshipFromHouseholder__c,
+                // 世帯
                 SurvivorHousehold__c,
                 SurvivorHousehold__r.Name,
                 SurvivorHousehold__r.PostalCode__c,
@@ -17,6 +19,7 @@ public with sharing class DeceasedSurvivorDao {
                 SurvivorHousehold__r.JointSignature1__c,
                 SurvivorHousehold__r.JointSignature2__c,
                 SurvivorHousehold__r.JointSignature3__c,
+                // 召天者
                 DeceasedPerson__c,
                 DeceasedPerson__r.Name,
                 DeceasedDate__c,
@@ -33,7 +36,97 @@ public with sharing class DeceasedSurvivorDao {
                     OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
                     )
                 WITH SECURITY_ENFORCED
-            ORDER BY SurvivorHousehold__c ASC, SurvivorIRelationshipFromHouseholder__c DESC, DeceasedDate__c DESC
+            ORDER BY 
+                SurvivorHousehold__c ASC,
+                SurvivorHousehold__r.PostalCode__c ASC,
+                SurvivorHousehold__r.AddressAllCombined__c ASC,
+                SurvivorIRelationshipFromHouseholder__c DESC,
+                DeceasedDate__c DESC
+        ];
+    }
+
+    // 指定期間に召天した召天者とその遺族を召天年度順に取得
+    @AuraEnabled(cacheable=true)
+    public static List<DeceasedSurvivor__c> getDeceasedSurvivorByDateOrderbyDeceasedDate(List<Date> dateList) {
+        return [
+            SELECT 
+                Id,
+                Name,
+                // 召天者
+                DeceasedPerson__c,
+                DeceasedPerson__r.Name,
+                DeceasedPerson__r.PersonNumCurrent__c,
+                DeceasedPerson__r.PersonType__c,
+                DeceasedDate__c,
+                DeceasedPerson__r.BoneDate__c,
+                DeceasedPerson__r.Remains__c,
+                // 遺族
+                SurvivorPerson__r.Name,
+                SurvivorPerson__r.PersonNumCurrent__c,
+                SurvivorRelationship__c,
+                SurvivorPerson__r.CelestialWorshipShipment__c,
+                // 世帯
+                SurvivorHousehold__r.PostalCode__c,
+                SurvivorHousehold__r.AddressAllCombined__c
+            FROM DeceasedSurvivor__c 
+            WHERE SurvivorDeath__c = FALSE
+                AND (
+                    (DeceasedDate__c >= :dateList[0] AND DeceasedDate__c <= :dateList[1])
+                    OR (DeceasedDate__c >= :dateList[2] AND DeceasedDate__c <= :dateList[3])
+                    OR (DeceasedDate__c >= :dateList[4] AND DeceasedDate__c <= :dateList[5])
+                    OR (DeceasedDate__c >= :dateList[6] AND DeceasedDate__c <= :dateList[7])
+                    OR (DeceasedDate__c >= :dateList[8] AND DeceasedDate__c <= :dateList[9])
+                    OR (DeceasedDate__c >= :dateList[10] AND DeceasedDate__c <= :dateList[11])
+                    OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
+                    )
+                WITH SECURITY_ENFORCED
+            ORDER BY 
+                DeceasedDate__c DESC,
+                DeceasedPerson__r.Name ASC
+        ];
+    }
+
+    // 指定期間に召天した召天者とその遺族を遺族郵便番号・住所・続柄・誕生日順に取得
+    @AuraEnabled(cacheable=true)
+    public static List<DeceasedSurvivor__c> getDeceasedSurvivorByDateOrderbyPostalcode(List<Date> dateList) {
+        return [
+            SELECT 
+                Id,
+                Name,
+                // 召天者
+                DeceasedPerson__c,
+                DeceasedPerson__r.Name,
+                DeceasedPerson__r.PersonNumCurrent__c,
+                DeceasedPerson__r.PersonType__c,
+                DeceasedDate__c,
+                DeceasedPerson__r.BoneDate__c,
+                DeceasedPerson__r.Remains__c,
+                // 遺族
+                SurvivorPerson__r.Name,
+                SurvivorPerson__r.PersonNumCurrent__c,
+                SurvivorPerson__r.PersonType__c,
+                SurvivorRelationship__c,
+                SurvivorPerson__r.CelestialWorshipShipment__c,
+                // 世帯
+                SurvivorHousehold__r.PostalCode__c,
+                SurvivorHousehold__r.AddressAllCombined__c
+            FROM DeceasedSurvivor__c 
+            WHERE SurvivorDeath__c = FALSE
+                AND (
+                    (DeceasedDate__c >= :dateList[0] AND DeceasedDate__c <= :dateList[1])
+                    OR (DeceasedDate__c >= :dateList[2] AND DeceasedDate__c <= :dateList[3])
+                    OR (DeceasedDate__c >= :dateList[4] AND DeceasedDate__c <= :dateList[5])
+                    OR (DeceasedDate__c >= :dateList[6] AND DeceasedDate__c <= :dateList[7])
+                    OR (DeceasedDate__c >= :dateList[8] AND DeceasedDate__c <= :dateList[9])
+                    OR (DeceasedDate__c >= :dateList[10] AND DeceasedDate__c <= :dateList[11])
+                    OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
+                    )
+                WITH SECURITY_ENFORCED
+            ORDER BY 
+                SurvivorHousehold__r.PostalCode__c ASC,
+                SurvivorHousehold__r.AddressAllCombined__c ASC,
+                SurvivorPerson__r.RelationshipFromHouseholder__c ASC,
+                SurvivorPerson__r.Birthday__c ASC
         ];
     }
 }
